--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "rimraf public/bundle.* && rollup --config"
   },
   "engines": {
-    "node": "=12.x || =14.x || =15.x"
+    "node": "20.x"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
