--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@vercel/node": "^3.2.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.4.5",
